--- a/style.css
+++ b/style.css
@@ -13,14 +13,16 @@ font-family: 'Poppins', sans-serif; */
 h1 {
   font-family: var(--primary-font-family);
   letter-spacing: 2px;
-  font-size: 30px;
+  font-size: 60px;
+  padding-top: 80px;
 }
 
 h2 {
   font-family: var(--secondary-font-family);
-  font-size: 14px;
+  font-size: 24px;
 }
 
 img {
-  width: 200px;
+  padding: 20px;
+  border-radius: 50%;
 }
